syntax = "proto3";
option go_package = "github.com/twirapp/twir/libs/api/messages/games";
package messages.games;

message RussianRouletteSettingsResponse {
	bool enabled = 1;
	bool can_be_used_by_moderator = 2;
	int32 timeout_seconds = 3;
	int32 decision_seconds = 4;
	string init_message = 5;
	string survive_message = 6;
	string death_message = 7;
	int32 charged_bullets = 8;
	int32 tumber_size = 9;
}

message UpdateRussianRouletteSettings {
	bool enabled = 1;
	bool can_be_used_by_moderator = 2;
	int32 timeout_seconds = 3;
	int32 decision_seconds = 4;
	string init_message = 5;
	string survive_message = 6;
	string death_message = 7;
	int32 charged_bullets = 8;
	int32 tumber_size = 9;
}

message DuelSettingsResponse {
	int32 user_cooldown = 1;
	int32 global_cooldown = 2;
	int32 timeout_seconds = 3;
	string start_message = 4;
	string result_message = 5;
	bool enabled = 6;
	int32 seconds_to_accept = 7;
	int32 points_per_win = 8;
	int32 points_per_lose = 9;
	int32 both_die_percent = 10;
	string both_die_message = 11;
}

message UpdateDuelSettings {
	int32 user_cooldown = 1;
	int32 global_cooldown = 2;
	int32 timeout_seconds = 3;
	string start_message = 4;
	string result_message = 5;
	bool enabled = 6;
	int32 seconds_to_accept = 7;
	int32 points_per_win = 8;
	int32 points_per_lose = 9;
	int32 both_die_percent = 10;
	string both_die_message = 11;
}
