syntax = "proto3";
option go_package = "github.com/satont/twir/libs/grpc/generated/api/songs_unprotected";
package api.songs_unprotected;

message GetSongsQueueRequest {
	string channel_id = 1;
}

message GetSongsQueueResponse {
	message Song {
		string title = 1;
		string requested_by = 2;
		string created_at = 3;
		string song_link = 4;
		int32 duration = 5;
	}

	repeated Song songs = 1;
}
